test/language/errors/errors_bitwise.hm
# bitwise '~' can't use boolean (expected integer)
# bitwise '&' can't use boolean and integer (expected integers)
# bitwise '&' can't use integer and boolean (expected integers)
# bitwise '|' can't use boolean and integer (expected integers)
# bitwise '|' can't use integer and boolean (expected integers)
# bitwise '^' can't use boolean and integer (expected integers)
# bitwise '^' can't use integer and boolean (expected integers)
# bitwise '<<' can't use boolean and integer (expected integers)
# bitwise '<<' can't use integer and boolean (expected integers)
# bitwise '>>' can't use boolean and integer (expected integers)
# bitwise '>>' can't use integer and boolean (expected integers)

use "errors"

try { ~false } except e { echo runtime(e) }

try { false & 2 } except e { echo runtime(e) }
try { 2 & false } except e { echo runtime(e) }

try { false | 2 } except e { echo runtime(e) }
try { 2 | false } except e { echo runtime(e) }

try { false ^ 2 } except e { echo runtime(e) }
try { 2 ^ false } except e { echo runtime(e) }

try { false << 2 } except e { echo runtime(e) }
try { 2 << false } except e { echo runtime(e) }

try { false >> 2 } except e { echo runtime(e) }
try { 2 >> false } except e { echo runtime(e) }
